# psychological-profiling-agent

./: .coverage  .env.exemple  .gitignore  Architecture.md  Context.md  README.md  app.py  main.py  pyproject.toml
data/cases/: case_001.json
data/rag_docs/processed/: InvestigativeInterviewing_PEACE_framework.md  InvestigativeInterviewing_PEACE_framework.txt  Mendez_principes_entretien_efficace.md  Mendez_principes_entretien_efficace.txt  Reid_technique_entretien_interrogatoire.md  Reid_technique_entretien_interrogatoire.txt  SUE_utilisation_strategique_preuve.md  SUE_utilisation_strategique_preuve.txt  UNODC_conduite_entretien.md  UNODC_conduite_entretien.txt  interrogation_dataset_enriched.jsonl  peace_method.md  peace_method.txt
data/rag_docs/processed_reference/: Mendez_principes_entretien_efficace.md  SUE_utilisation_strategique_preuve.md
data/rag_docs/raw/: interrogation_dataset.csv
data/suspects/: suspect_001.json  suspect_1_001_martin.json  suspect_2_001_antonin.json  suspect_3_001_claire.json
src/: agents.py  data_loader.py  data_prep.py  graph.py  prompts.py  rag.py  state.py  utils.py
tests/: test_agents.py  test_graph.py  test_prompts.py  test_state.py  test_utils.py
