[project]
name = "psychological-profiling-agent"
version = "0.1.0"
description = "Multi-Agent AI Interrogation Simulator with Dynamic Profiling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.30.0",
    "langgraph>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "datasets>=4.8.4",
]
